# packages/backend_app/src/apps/posts/route.ts
@@ -4,6 +4,8 @@ import {
   getPostsResponseSchema,
   postPostRequestSchema,
   postPostResponseSchema,
+  updatePostParamsSchema,
+  updatePostRequestSchema,
 } from "./dto";
 
 export const getPostsRoute = createRoute({
@@ -12,7 +14,7 @@ export const getPostsRoute = createRoute({
   path: "/",
   responses: {
     200: {
-      description: "Hello message",
+      description: "get posts",
       content: {
         "application/json": {
           schema: getPostsResponseSchema,
@@ -37,12 +39,34 @@ export const postPostRoute = createRoute({
   },
   responses: {
     200: {
-      description: "Hello message with name",
+      description: "create a post",
       content: {
         "application/json": {
           schema: postPostResponseSchema,
         },
       },
+    },
+    ...ErrorResponses,
+  },
+});
+
+export const updatePostRoute = createRoute({
+  tags: ["posts"],
+  method: "put",
+  path: "/:id",
+  request: {
+    params: updatePostParamsSchema,
+    body: {
+      content: {
+        "application/json": {
+          schema: updatePostRequestSchema,
+        },
+      },
+    },
+  },
+  responses: {
+    200: {
+      description: "update a post",
     },
     ...ErrorResponses,
   },
